--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://github.com/alonsovzqz"
+        rel="noopener noreferrer"
+        target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Alonso V&aacute;zquez</a>.
     </footer>
   </body>
 </html>
