Finish the storage indicator.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
           <p>
             You’ve used <span class="text-bold">815 GB</span> of your storage
           </p>
-          <div class="storage__indicator"></div>
-          <p>
-            <span class="text-bold">0 GB</span>
-            <span class="text-bold">1000 GB</span>
-          </p>
+          <div class="storage__indicator-container">
+            <div class="storage__indicator"></div>
+            <p>
+              <span class="text-bold">0 GB</span>
+              <span class="text-bold">1000 GB</span>
+            </p>
+          </div>
           <div class="space-left">
             <span class="text-bold">185</span>
             <span> GB LEFT</span>
