Fixed the indicator section for mobile.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="storage__item container-used-space">
-          <p>
+          <p class="text-center w-100">
             You’ve used <span class="text-bold">815 GB</span> of your storage
           </p>
           <div class="storage__indicator-container">
@@ -39,7 +39,7 @@
           </div>
           <div class="space-left">
             <span class="text-bold">185</span>
-            <span> GB LEFT</span>
+            <span class="text-uppercase"> GB Left</span>
           </div>
         </div>
       </div>
