Add the styles for the tablet and desktop versions.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="storage__item container-used-space">
-          <p class="text-center w-100">
+          <p class="w-100">
             You’ve used <span class="text-bold">815 GB</span> of your storage
           </p>
           <div class="storage__indicator-container">
