Fix attribution links.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@
     <footer class="attribution">
       Challenge by
       <a
-        href="https://github.com/alonsovzqz"
+        href="https://www.frontendmentor.io?ref=challenge"
         rel="noopener noreferrer"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Alonso V&aacute;zquez</a>.
+      >. Coded by
+      <a
+        href="https://github.com/alonsovzqz"
+        rel="noopener noreferrer"
+        target="_blank"
+        >Alonso V&aacute;zquez</a
+      >.
     </footer>
   </body>
 </html>
